EDU-1461 Ensure correct wrapping of info icon

--- a/src/components/maintenance/maintenance-media-library-tab.less
+++ b/src/components/maintenance/maintenance-media-library-tab.less
@@ -52,6 +52,11 @@
   }
 }
 
+.MaintenanceMediaLibraryTab-bulkDeletePanelRadios {
+  display: grid;
+  grid-auto-flow: column;
+}
+
 .MaintenanceMediaLibraryTab-bulkDeletePanelButton {
   display: grid;
   grid-gap: 10px;
